[project]
name = "youtube-intelligence-stack"
version = "0.1.0"
description = "Local-first YouTube intelligence pipeline for public-source research."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Aleksei Ulianov / Sprut_AI" }
]
dependencies = [
  "PyYAML>=6.0",
  "yt-dlp>=2024.8.6"
]
keywords = ["youtube", "research", "public-source-intelligence", "content-strategy", "automation"]

[project.urls]
Homepage = "https://github.com/AlekseiUL/youtube-intelligence-stack"
Repository = "https://github.com/AlekseiUL/youtube-intelligence-stack"
Issues = "https://github.com/AlekseiUL/youtube-intelligence-stack/issues"

[tool.setuptools]
py-modules = ["run"]
